--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install specific version of Icarus Verilog
+      - name: Install Icarus Verilog
         run: |
           sudo apt-get update
-          sudo apt-get install -y iverilog=10.3
+          sudo apt-get install -y iverilog
 
       - name: Check Icarus Verilog version
         run: iverilog -V
