--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,7 +1,7 @@
 SIM ?= icarus
 TOPLEVEL_LANG = verilog
-VERILOG_SOURCES += $(PWD)/../hdl/or_gate.v
-VERILOG_SOURCES += $(PWD)/wrappers/or_test.v
+VERILOG_SOURCES += $(PWD)/../hdl/dut.v
+VERILOG_SOURCES += $(PWD)/wrappers/test.py
 
 or:
 	$(MAKE) sim MODULE=or_test TOPLEVEL=or_test
