--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,7 +1,7 @@
 SIM ?= icarus
 TOPLEVEL_LANG = verilog
 VERILOG_SOURCES += $(PWD)/../hdl/dut.v
-VERILOG_SOURCES += $(PWD)/wrappers/test.py
+VERILOG_SOURCES += $(PWD)/tests/test.py
 
 or:
 	$(MAKE) sim MODULE=or_test TOPLEVEL=or_test
