--- a/tests/Makefile
+++ b/tests/Makefile
@@ -4,5 +4,5 @@ VERILOG_SOURCES += $(PWD)/../hdl/dut.v
 VERILOG_SOURCES += $(PWD)/tests/test.py
 
 or:
-	$(MAKE) sim MODULE=or_test TOPLEVEL=or_test
+	$(MAKE) sim MODULE=or_test TOPLEVEL=dut
 include $(shell cocotb-config --makefiles)/Makefile.sim
