--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,8 +1,9 @@
 SIM ?= icarus
 TOPLEVEL_LANG = verilog
 VERILOG_SOURCES += $(PWD)/../hdl/dut.v
-VERILOG_SOURCES += $(PWD)/tests/test.py
 
-or:
-	$(MAKE) sim MODULE=test TOPLEVEL=test
+# Specify the Python testbench file separately
+TESTBENCH = $(PWD)/tests/test.py
+
+# Include the Cocotb Makefile
 include $(shell cocotb-config --makefiles)/Makefile.sim
