--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,8 +1,8 @@
-TOPLEVEL_LANG = verilog
-TOPLEVEL = dut
-MODULE = test
+# Makefile
 
-VERILOG_SOURCES = dut.v
-SIM = icarus
+TOPLEVEL = your_top_level_module
+MODULE = your_test_module
+VERILOG_SOURCES = $(PWD)/../hdl/dut.v $(PWD)/../hdl/dut.v
+COCOTB_REDUCED_LOG_FMT = 1
 
 include $(shell cocotb-config --makefiles)/Makefile.sim
