--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,21 +1,39 @@
 name: learning-cocotb
 run-name: ${{ github.actor }} is learning Cocotb
 on: [push]
+
 jobs:
   verify:
     runs-on: ubuntu-latest
-    timeout-minutes: 3
+    timeout-minutes: 10
+
     steps:
-      - uses: actions/checkout@v3
-      - run: sudo apt install -y --no-install-recommends iverilog
-      - run: pip3 install cocotb cocotb-bus
-      - run: make -C tests
-      - uses: actions/upload-artifact@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Install Icarus Verilog
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y iverilog
+
+      - name: Install or upgrade Cocotb
+        run: |
+          python -m pip install --upgrade pip
+          pip install cocotb cocotb-bus
+
+      - name: Run make
+        run: |
+          cd tests
+          make
+
+      - name: Upload waveform artifacts
+        uses: actions/upload-artifact@v3
         with:
           name: waveform
           path: tests/*.vcd
-      - name: Publish Test Report
+
+      - name: Publish JUnit Test Report
         uses: mikepenz/action-junit-report@v3
-        if: always() # always run even if the previous step fails
+        if: always()
         with:
           report_paths: '**/tests/results.xml'
